# hydroplane

./: .gitignore  CASE_STUDY.md  Cargo.toml  README.md  build.rs
benches/: combinators_vs_wide.rs  gemm_accel_toggle.rs  map_ilp.rs  mat3_inverse_vs_wide.rs  micro_vs_wide.rs
examples/: asm_mat3.rs  asm_probe.rs  bench_spheres.rs  micro_kernel.rs  soa_rs_interop.rs  spheres.rs  sve_check.rs
future/: COOPERATIVE_MATRIX.md
hydroplane-auto/: Cargo.toml  README.md
hydroplane-auto/driver/: main.rs
hydroplane-auto/src/: analysis.rs  lib.rs
hydroplane-example/: Cargo.toml  build.rs
hydroplane-example/benches/: case_study.rs  workloads.rs
hydroplane-example/examples/: asm_cols.rs  asm_saxpy.rs
hydroplane-example/src/: asum.rs  cmul.rs  cosine.rs  dot.rs  double_polysum.rs  horner.rs  l1dist.rs  l2norm.rs  lib.rs  mandelbrot.rs  mat3_inverse.rs  matmul.rs  normalize.rs  pipeline.rs  polysum.rs  saxpy.rs  transform.rs
hydroplane-example/tests/: correctness.rs
hydroplane-macros/: Cargo.toml  README.md
hydroplane-macros/src/: lib.rs
hydroplane-test/: Cargo.toml
hydroplane-test/src/: lib.rs
spmd-test/: Cargo.toml
spmd-test/src/: lib.rs
src/: backend.rs  cols.rs  dense.rs  dispatch.rs  glam_ext.rs  ilp.rs  kernel_macro.rs  lib.rs  matrix.rs  scalar.rs  soa.rs  varying.rs
src/arch/: amx.rs  avx512bf16.rs  avx512fp16.rs  mod.rs  rvv.rs  sme1.rs  sme2.rs  sve1.rs  sve2.rs
src/backend/: avx1.rs  avx2.rs  avx512.rs  avx512bf16.rs  avx512fp16.rs  diff_tests.rs  neon.rs  neon_a32.rs  rvv.rs  sse4.rs  subgroup.rs  sve.rs  wasm.rs
tests/: gang_combinators.rs  gemm_parity.rs  glam_ext.rs  half_backends.rs  ilp.rs  int_kernels.rs  int_lanes.rs  kernel_macro.rs  kernel_macro_fallback.rs  sme_mma.rs  soa_rs_interop.rs  spheres_parity.rs  varying_helpers.rs
tools/: bench-accel-toggle.sh  qemu-sve.sh
