[package]
name = "hydroplane"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Floating but fast: float-agnostic, ISPC-style SPMD/SIMD infrastructure — write one kernel generic over the scalar element (f32/f64/f16/bf16) and run it with runtime ISA dispatch."
repository = "https://github.com/valstad-shipworks/wreck"

[features]
default = ["std", "macros"]
std = ["alloc", "half/std"]
alloc = []
libm = ["dep:libm"]
# The `#[kernel]` attribute (proc-macro). On by default; disable for a build with no proc-macro
# dependency — the `macro_rules!` `kernel!` fallback then takes over.
macros = ["dep:hydroplane-macros"]

# Declare `target_arch = "spirv"` (the rust-gpu target) and the opt-out `no_apple_accelerate`
# cfg as known, so the platform-specific `#[cfg]`s don't trip the unexpected_cfgs lint.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
    'cfg(no_apple_accelerate)',
    'cfg(no_sve)',
    'cfg(no_sme)',
    'cfg(no_amx)',
    'cfg(no_ilp)',
    'cfg(no_avx)',
    'cfg(no_avx512)',
    'cfg(static_dispatch)',
    'cfg(neon_over_sve)',
    # Set by build.rs when static_dispatch + a pinned target-cpu let the unroll factor be resolved at
    # build time instead of by the runtime sweep.
    'cfg(hp_resolved_unroll)',
] }

[dependencies]
# f16/bf16 element support (widen-to-f32 compute path; native AVX-512-FP16 / NEON-fp16 lanes layer
# on top where the target supports them). Always present — `f16`/`bf16` are re-exported from the crate root.
half = { version = "2", default-features = false }
hydroplane-macros = { version = "0.0.1", path = "hydroplane-macros", optional = true }
libm = { version = "0.2", optional = true }

# rust-gpu subgroup intrinsics — only pulled in when compiling to SPIR-V.
[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = "=0.10.0-alpha.1"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
rand = "0.9"
soa-rs = "1.0.0"
wide = "1.5.0"

# Use the `#[kernel]` attribute, so they only build with the (default) `macros` feature.
[[example]]
name = "spheres"
required-features = ["macros"]

[[example]]
name = "micro_kernel"
required-features = ["macros"]

[[example]]
name = "asm_probe"
required-features = ["macros"]

# Same f32 GEMM kernel through `dispatch_matrix`; compare default (Accelerate) vs
# `--cfg no_apple_accelerate` (SME) via criterion baselines — see the file header.
[[bench]]
name = "gemm_accel_toggle"
harness = false

# `#[kernel]` micro-kernel (cached dispatch) vs hand-written `wide` SIMD vs scalar.
[[bench]]
name = "micro_vs_wide"
harness = false
required-features = ["macros"]

# New fixed-`N` column combinators (`count_n`, `for_each_hit_n`, `masked_chunks` + `gather_n`) vs
# hand-written `wide` SIMD vs scalar — the zero-cost check.
[[bench]]
name = "combinators_vs_wide"
harness = false
required-features = ["macros"]

# `Gang::map`/`map_n` ILP unroll: unrolled (default) vs `--cfg no_ilp` (K=1) vs hand-written `wide`.
[[bench]]
name = "map_ilp"
harness = false
required-features = ["macros"]
