[package]
name = "hydroplane"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Floating but fast: float-agnostic, ISPC-style SPMD/SIMD infrastructure — write one kernel generic over the scalar element (f32/f64/f16/bf16) and run it with runtime ISA dispatch."
repository = "https://github.com/oh-yes-0-fps/hydroplane"
documentation = "https://docs.rs/hydroplane"
readme = "README.md"
keywords = ["simd", "spmd", "ispc", "vectorization", "no-std"]
categories = ["hardware-support", "no-std", "mathematics"]

[features]
default = ["std"]
std = ["alloc", "half/std", "glam?/std"]
alloc = []
libm = ["dep:libm", "glam?/libm"]
glam = ["dep:glam"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
    'cfg(hp_no_apple_accelerate)',
    'cfg(hp_no_sve)',
    'cfg(hp_no_sme)',
    'cfg(hp_no_amx)',
    'cfg(hp_no_ilp)',
    'cfg(hp_no_avx)',
    'cfg(hp_no_avx512)',
    'cfg(hp_static_dispatch)',
    'cfg(hp_neon_over_sve)',
    'cfg(hp_analyze)',
    'cfg(hp_resolved_unroll)',
] }

[dependencies]
glam = { version = "0.32", default-features = false, optional = true }
half = { version = "2", default-features = false, features = ["num-traits"] }
hydroplane-macros = { version = "0.1.0", path = "hydroplane-macros" }
libm = { version = "0.2", optional = true }
num-traits = { version = "0.2.19", default-features = false }

# rust-gpu subgroup intrinsics — only pulled in when compiling to SPIR-V.
[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = "=0.10.0-alpha.1"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
rand = "0.9"
soa-rs = "1.0.0"
wide = "1.5.0"

# Same f32 GEMM kernel through `dispatch_matrix`; compare default (Accelerate) vs
# `--cfg hp_no_apple_accelerate` (SME) via criterion baselines — see the file header.
[[bench]]
name = "gemm_accel_toggle"
harness = false

# `#[kernel]` micro-kernel (cached dispatch) vs hand-written `wide` SIMD vs scalar.
[[bench]]
name = "micro_vs_wide"
harness = false

# New fixed-`N` column combinators (`count_n`, `for_each_hit_n`, `masked_chunks` + `gather_n`) vs
# hand-written `wide` SIMD vs scalar — the zero-cost check.
[[bench]]
name = "combinators_vs_wide"
harness = false

# `Gang::map`/`map_n` ILP unroll: unrolled (default) vs `--cfg hp_no_ilp` (K=1) vs hand-written `wide`.
[[bench]]
name = "map_ilp"
harness = false

# Batched 3x3 inverse (`Mat3Wide::inverse`, the FEM Jacobian-inversion kernel) vs hand-written
# `wide` SIMD vs scalar `glam`.
[[bench]]
name = "mat3_inverse_vs_wide"
harness = false
required-features = ["glam"]

[[example]]
name = "asm_mat3"
required-features = ["glam"]

[workspace]
members = ["hydroplane-macros", "hydroplane-auto", "hydroplane-example"]
resolver = "2"

