[package]
name = "hydroplane-auto"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Build-time MIR analysis for hydroplane `#[kernel]`s: a nightly StableMIR pass (quarantined out-of-process) that measures each kernel and feeds per-kernel codegen decisions back to the `#[kernel]` macro."
repository = "https://github.com/valstad-shipworks/hydroplane"
documentation = "https://docs.rs/hydroplane-auto"
readme = "README.md"
keywords = ["simd", "spmd", "mir", "analysis", "kernel"]
categories = ["development-tools::build-utils"]

# The nightly `rustc_driver` MIR pass ships as source under `driver/`, embedded via `include_str!`; the
# `build_script` helper writes it out and compiles it on the pinned nightly at build time. It is not a
# member/target of this crate, which stays pure-stable with no dependencies.
